--- a/Taller procesos estocasticos.ipynb
+++ b/Taller procesos estocasticos.ipynb
@@ -157,26 +157,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Programación Distribucion Gamma $X = Gamma(k,\\theta)$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import scipy.stats\n",
+    "import scipy.stats as ss\n",
     "import pylab as plt\n",
     "import matplotlib\n",
     "\n",
     "plt.figure(figsize=(17,16))\n",
-    "p=0.5\n",
-    "n=3000\n",
-    "x=np.random.binomial(n,p,size=n)\n",
-    "expectedValueT=n*p\n",
+    "alpha=5\n",
+    "loc=100.5\n",
+    "beta=22\n",
+    "x=ss.gamma.rvs(alpha,loc=loc,scale=beta,size=10000)\n",
+    "expectedValueT=beta*alpha\n",
     "mean=x.mean()#promedio o valor esperado\n",
     "bins=100\n",
-    "siz,bins,patches=plt.hist(x,bins,histtype='stepfilled',label='sample binomial data')\n",
+    "siz,bins,patches=plt.hist(x,bins,histtype='stepfilled',label='sample gamma data')\n",
     "plt.setp(patches,'facecolor','g','alpha',0.75)\n",
     "plt.grid()\n",
     "plt.plot([mean,mean],[0,max(siz)],color='r',label=\"Sample Mean:  \"+str(mean))\n",
